<?xml version="1.0"?>
<package format="2">
  <name>robotont_nuc_description</name>
  <version>0.0.0</version>
  <description>The robotont_nuc_description package</description>
  <maintainer  email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>

  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>robotont_description</depend>
  <exec_depend>realsense2_description</depend>
 
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
